tests/error/modifier_errors/flag_loop.err
Error: Assignment in dagger (at $FILE:8:13)
  | 
6 | @guppy(unitary_flags=UnitaryFlags.Dagger)
7 | def test() -> None:
8 |     for _ in range(3):
  |              ^^^^^^^^ Assignment found in a dagger context

Guppy compilation failed due to 1 previous error
